--- a/index.html
+++ b/index.html
@@ -27,15 +27,28 @@
             const ctx = canvas.getContext("2d");
             ctx.fillStyle = "rgba(13,242,23,0.5)";
 
-            canvas.addEventListener("click", (e) =>{
-                console.log("Hola");
-                console.log(event);
+                canvas.addEventListener("click", (e) => {
 
-                ctx.beginPath();
-                ctx.arc(e.layerX, e.layerY, 50, 0, 2*Math.PI);
-                ctx.fill();
-                ctx.stroke();
+                    console.log (e);
+                    ctx.beginPath();
+                    ctx.arc(e.layerX, e.layerY, 50, 0, 2*Math.PI);
+                    ctx.fill();
+                    ctx.stroke();
+                 
             })
+
+            canvas.addEventListener("mouseover", (e) =>{
+                console.log("mouseover");
+
+                color = random_rgba();
+                ctx.fillStyle = color;
+                 })
+
+            function random_rgba(){
+                var o = Math.round, r = Math.random, s = 255;
+                return 'rgba(' + o(r()*s) + ',' + o(r()*s) + ',' + o(r()*s) + ',' + r().toFixed(1) + ')';
+
+            }
 
             /*ctx.fillStyle = "#7d88e5";
             ctx.fillRect(0, 0, 50, 50);
