--- a/index.html
+++ b/index.html
@@ -21,20 +21,37 @@
     <canvas id="myCanvas" width="500" height="500"></canvas>
 
     <script>
-        window.onload = () => {
-
             const canvas = document.getElementById("myCanvas");
             const ctx = canvas.getContext("2d");
-            ctx.fillStyle = "rgba(13,242,23,0.5)";
+
+            var x= 225, y = 255;
+
+            document.addEventListener("keydown", (e)=>{
+
+                console.log(e);
+
+                x= Math.floor(Math.random()* 450);
+                y= Math.floor(Math.random()* 450);
+
+                ctx.fillStyle = random_rgba();
+                repaint();
+
+            })
+
+            function repaint(){
+                ctx.fillRect(x, y, 50,50);
+                ctx.strokeRect(x, y, 50,50);
+            }
+            // ctx.fillStyle = "rgba(13,242,23,0.5)";
 
             
 
-            canvas.addEventListener("mouseover", (e) => {
-                console.log("mouseover");
+            // canvas.addEventListener("mouseover", (e) => {
+            //     console.log("mouseover");
 
-                color = random_rgba();
-                ctx.fillStyle = color;
-            })
+            //     color = random_rgba();
+            //     ctx.fillStyle = color;
+            // })
 
             function random_rgba() {
                 var o = Math.round, r = Math.random, s = 255;
@@ -42,121 +59,117 @@
 
             }
 
-            let figura = true;
-            canvas.addEventListener("mouseout", (e) => {
-                console.log("mouseout");
-                figura = !figura;
+            // let figura = true;
+            // canvas.addEventListener("mouseout", (e) => {
+            //     console.log("mouseout");
+            //     figura = !figura;
 
 
-            })
+            // })
 
-            canvas.addEventListener("mousemove", (e) => {
+            // canvas.addEventListener("mousemove", (e) => {
 
-                if (press) {
-                    ctx.beginPath();
-                    ctx.arc(e.layerX, e.layerY, 10, 0, 2 * Math.PI);
-                    ctx.fill();
-                }
-
-
-            })
-
-            let press = false;
-            canvas.addEventListener("mousedown", (e) => {
-                press = true;
-
-                console.log(e);
-                ctx.beginPath();
-
-                if (figura) {
-
-                    ctx.arc(e.layerX, e.layerY, 50, 0, 2 * Math.PI);
-
-                } else {
-                    ctx.fillRect(e.layerX - 50, e.layerY - 50, 100, 100);
-                    ctx.strokeRect(e.layerX - 50, e.layerY - 50, 100, 100);
-                }
-
-                ctx.fill();
-                ctx.stroke();
-
-            })
-
-            canvas.addEventListener("mouseup", (e) => {
-                press = false;
-            })
-
-            /*ctx.fillStyle = "#7d88e5";
-            ctx.fillRect(0, 0, 50, 50);
-            ctx.fillStyle = "#cd0009";
-            ctx.fillRect(30, 30, 50, 50);
-            ctx.fillStyle = "#ff96ffBF";
-            ctx.fillRect(60, 60, 50, 50);
-
-            ctx.fillStyle = "rgba(0,0,200,0.5)";
-            ctx.strokeStyle = "blue";
-
-            ctx.beginPath();
-            ctx.moveTo(185, 10);
-            ctx.lineTo(185, 65);
-            ctx.lineTo(125, 65);
-            ctx.fill();
-            ctx.closePath();
-
-            ctx.beginPath();
-
-            ctx.moveTo(222, 65);
-            ctx.lineTo(272, 125);
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "purple";
-            ctx.arc(170, 110, 20, 0, 2 * Math.PI);
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "blue";
-            ctx.arc(215, 110, 20, 0, 2 * Math.PI);
-            ctx.fill();
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.fillStyle = "black";
-            ctx.font = "30px Arial";
-            ctx.fillText("Hola mundo", 250, 50);
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "green";
-            ctx.strokeText("Hola mundo", 252, 52);
-            ctx.closePath();
-
-            var grd = ctx.createLinearGradient(140, 170, 200, 100);
-            grd.addColorStop(0, "#7D33FF");
-            grd.addColorStop(0.5, "#33BBFF");
-            grd.addColorStop(1, "#FF33C4");
-
-            ctx.fillStyle = grd;
-            ctx.fillRect(140, 170, 200, 100);
-
-            var grd2 = ctx.createRadialGradient(240, 320, 5, 255, 340, 150);
-            grd2.addColorStop(0, "#FFD133");
-            grd2.addColorStop(0.5, "#61FF33");
-            grd2.addColorStop(1, "#FF336E");
-
-            ctx.fillStyle = grd2;
-            ctx.fillRect(140, 270, 200, 100);
+            //     if (press) {
+            //         ctx.beginPath();
+            //         ctx.arc(e.layerX, e.layerY, 10, 0, 2 * Math.PI);
+            //         ctx.fill();
+            //     }
 
 
-            var img = document.getElementById("my_image");
-            ctx.drawImage(img, 340, 70, 80, 80);*/
+            // })
+
+            // let press = false;
+            // canvas.addEventListener("mousedown", (e) => {
+            //     press = true;
+
+            //     console.log(e);
+            //     ctx.beginPath();
+
+            //     if (figura) {
+
+            //         ctx.arc(e.layerX, e.layerY, 50, 0, 2 * Math.PI);
+
+            //     } else {
+            //         ctx.fillRect(e.layerX - 50, e.layerY - 50, 100, 100);
+            //         ctx.strokeRect(e.layerX - 50, e.layerY - 50, 100, 100);
+            //     }
+
+            //     ctx.fill();
+            //     ctx.stroke();
+
+            // })
+
+            // canvas.addEventListener("mouseup", (e) => {
+            //     press = false;
+            // })
+
+            // /*ctx.fillStyle = "#7d88e5";
+            // ctx.fillRect(0, 0, 50, 50);
+            // ctx.fillStyle = "#cd0009";
+            // ctx.fillRect(30, 30, 50, 50);
+            // ctx.fillStyle = "#ff96ffBF";
+            // ctx.fillRect(60, 60, 50, 50);
+
+            // ctx.fillStyle = "rgba(0,0,200,0.5)";
+            // ctx.strokeStyle = "blue";
+
+            // ctx.beginPath();
+            // ctx.moveTo(185, 10);
+            // ctx.lineTo(185, 65);
+            // ctx.lineTo(125, 65);
+            // ctx.fill();
+            // ctx.closePath();
+
+            // ctx.beginPath();
+
+            // ctx.moveTo(222, 65);
+            // ctx.lineTo(272, 125);
+            // ctx.stroke();
+            // ctx.closePath();
+
+            // ctx.beginPath();
+            // ctx.strokeStyle = "purple";
+            // ctx.arc(170, 110, 20, 0, 2 * Math.PI);
+            // ctx.stroke();
+            // ctx.closePath();
+
+            // ctx.beginPath();
+            // ctx.strokeStyle = "blue";
+            // ctx.arc(215, 110, 20, 0, 2 * Math.PI);
+            // ctx.fill();
+            // ctx.stroke();
+            // ctx.closePath();
+
+            // ctx.beginPath();
+            // ctx.fillStyle = "black";
+            // ctx.font = "30px Arial";
+            // ctx.fillText("Hola mundo", 250, 50);
+            // ctx.closePath();
+
+            // ctx.beginPath();
+            // ctx.strokeStyle = "green";
+            // ctx.strokeText("Hola mundo", 252, 52);
+            // ctx.closePath();
+
+            // var grd = ctx.createLinearGradient(140, 170, 200, 100);
+            // grd.addColorStop(0, "#7D33FF");
+            // grd.addColorStop(0.5, "#33BBFF");
+            // grd.addColorStop(1, "#FF33C4");
+
+            // ctx.fillStyle = grd;
+            // ctx.fillRect(140, 170, 200, 100);
+
+            // var grd2 = ctx.createRadialGradient(240, 320, 5, 255, 340, 150);
+            // grd2.addColorStop(0, "#FFD133");
+            // grd2.addColorStop(0.5, "#61FF33");
+            // grd2.addColorStop(1, "#FF336E");
+
+            // ctx.fillStyle = grd2;
+            // ctx.fillRect(140, 270, 200, 100);
 
 
-        }
-
+            // var img = document.getElementById("my_image");
+            // ctx.drawImage(img, 340, 70, 80, 80);*/
 
     </script>
 </body>
