--- a/index.html
+++ b/index.html
@@ -21,43 +21,55 @@
     <canvas id="myCanvas" width="500" height="500"></canvas>
 
     <script>
-            const canvas = document.getElementById("myCanvas");
-            const ctx = canvas.getContext("2d");
+        const canvas = document.getElementById("myCanvas");
+        const ctx = canvas.getContext("2d");
 
-            var x= 225, y = 255;
+        var x = 225, y = 255;
 
-            document.addEventListener("keydown", (e)=>{
+        document.addEventListener("keydown", (e) => {
 
-                console.log(e);
+            console.log(e.keyCode);
 
-                x= Math.floor(Math.random()* 450);
-                y= Math.floor(Math.random()* 450);
-
-                ctx.fillStyle = random_rgba();
-                repaint();
-
-            })
-
-            function repaint(){
-                ctx.fillRect(x, y, 50,50);
-                ctx.strokeRect(x, y, 50,50);
-            }
-            // ctx.fillStyle = "rgba(13,242,23,0.5)";
-
-            
-
-            // canvas.addEventListener("mouseover", (e) => {
-            //     console.log("mouseover");
-
-            //     color = random_rgba();
-            //     ctx.fillStyle = color;
-            // })
-
-            function random_rgba() {
-                var o = Math.round, r = Math.random, s = 255;
-                return 'rgba(' + o(r() * s) + ',' + o(r() * s) + ',' + o(r() * s) + ',' + r().toFixed(1) + ')';
+            switch (e.keyCode) {
+                case 87:
+                    y -= 10;
+                    break;
+                case 83:
+                    y += 10;
+                    break;
+                case 68:
+                    x += 10;
+                    break;
+                case 65:
+                    x -= 10;
+                    break;
 
             }
+            ctx.fillStyle = random_rgba();
+            repaint();
+
+        })
+
+        function repaint() {
+            ctx.fillRect(x, y, 50, 50);
+            ctx.strokeRect(x, y, 50, 50);
+        }
+        // ctx.fillStyle = "rgba(13,242,23,0.5)";
+
+
+
+        // canvas.addEventListener("mouseover", (e) => {
+        //     console.log("mouseover");
+
+        //     color = random_rgba();
+        //     ctx.fillStyle = color;
+        // })
+
+        function random_rgba() {
+            var o = Math.round, r = Math.random, s = 255;
+            return 'rgba(' + o(r() * s) + ',' + o(r() * s) + ',' + o(r() * s) + ',' + r().toFixed(1) + ')';
+
+        }
 
             // let figura = true;
             // canvas.addEventListener("mouseout", (e) => {
