--- a/index6.html
+++ b/index6.html
@@ -34,6 +34,36 @@
             Suma
         </button>
 
+        <h3>Resultado <span v-if="result!=0"> {{result}} </span></h3>
+
+        <hr>
+
+        <ul>
+            <li v-for ="item in persons">
+                {{item.name}} - {{item.lastname}}
+        </ul>
+        <form>
+
+            <fieldset>
+                <legend>
+                    Nombre(s):
+                </legend>
+                <input type = "text" v-model="username" name="">
+            </fieldset>
+
+            <fieldset>
+                <legend>
+                    Apellido(s):
+                </legend>
+                <input type = "text" v-model="lastname" name="">
+            </fieldset>
+
+            <button type="button" v-on:click="addPerson">
+                Save data
+            </button>
+
+        </form>
+
         <h3>Resultado : <span v-if="result!=0"> {{ result }}</span> </h3>
     </div>
 
@@ -48,12 +78,31 @@
                 const numero1 = 0;
                 const numero2 = 0;
                 const result = 0;
+                const username= ref('');
+                const lastname= ref('');
+                const persons = ref([]);
+
                 return {
                     name: ref(''),
                     count: ref(0),
                     numero1: ref(0),
                     numero2: ref(0),
-                    result: ref(0)
+                    result: ref(0),
+                    username,
+                    lastname,
+                    persons
+                }
+            },
+
+            methods:{
+                addPerson(){
+                    const person = {
+                        name: this.username,
+                        lastname: this.lastname
+                    }
+                    this.persons.push(person);
+                    console.log(this,username);
+                    console.log(this.lastname);
                 }
             }
         }).mount('#container_app_vue')
